@@ -1,3 +1,7 @@
+2017-11-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>
+
+	* Resolves #83033: Adapt suggest options to 8 LTS
+
 2017-10-16  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
 	* Resolves #82779: Corrections to official and English names of Swiss cantons - Thanks to Urs Bräm
